src/test/ui/or-patterns/fn-param-wrap-parens.stderr
error: top-level or-patterns are not allowed in function parameters
  --> $DIR/fn-param-wrap-parens.rs:14:9
   |
LL | fn fun1(A | B: E) {}
   |         ^^^^^ help: wrap the pattern in parentheses: `(A | B)`

error: aborting due to previous error

